--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "joi": "^13.7.0",
     "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.9",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
