--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "request": "^2.88.0",
     "sequelize": "^4.39.0",
     "sqlite3": "^3.1.8",
     "vue": "^2.5.17",
