--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "description": "client app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node app"
   },
   "author": "NetBLB",
   "license": "ISC",
