--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "NetBLB",
+  "author": "Simon Boudreault",
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
